test/libyul/yulSyntaxTests/eof/datacopy_shadowing.yul
{
    function datacopy(a, b, c) {}
}
// ====
// bytecodeFormat: >=EOFv1
// ----
// DeclarationError 5017: (6-35): The identifier "datacopy" is reserved and can not be used.
